# mox-erc20-cu

./: justfile  pyproject.toml
contracts/: snek_token.vy
script/: deploy.py
tests/: test_snek_stateful.py  test_token.py
tests/sub_lesson/: test_stateful.py  test_stateless.py
